# Flympy

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml  setup.py
flympy/: __init__.py
flympy/core/: README.md  __init__.py  flimreader.py  params.py  readfunctions.py  tiffinfo.py
flympy/math/flim/: __init__.py  exponentials.py  flimparams.py  flimunits.py  methods.py
